messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  selector:
    app: messaging
    version: green  # switch to 'blue' or 'green'
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
